# pah4rw_DS5111su24_lab_01

./: .gitignore  README.md  data_prep.py  data_processing.sh  makefile  pyproject.toml  pytest.ini  raven_counts.sh  raven_line_count.sh  raven_word_count.sh  requirements.txt  total_lines.sh  total_words.sh
.github/workflows/: validations.yml
src/: data_prep.py
src/pah4rw/: __init__.py
src/pah4rw_DS5111su24_lab_01/: __init__.py
tests/: check_for_pytest.py  decorator.py  test_1_clean_text.py  test_1_count_words.py  test_1_tokenize_text.py  test_2_clean_text.py  test_2_count_words.py  test_2_tokenize_text.py  test_3_clean_text.py  test_3_count_words.py  test_3_tokenize_text.py  test_4_clean_text.py  test_4_count_words.py  test_4_tokenize_text.py  test_5_clean_text.py  test_5_count_words.py  test_5_tokenize_text.py  test_6_clean_text.py  test_6_count_words.py  test_6_tokenize_text.py  test_bash.py  test_integration_tests.py  test_python_version.py  test_skip.py
