[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pah4rw_DS5111su24_lab_01"
version = "0.0.2"
authors = [
  { name="Brett Genz", email="pah4rw@virginia.edu" },
]
description = "A package of text processing functions"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/"
Issues = "https://github.com/"